Teamplates/Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: svc
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: test
  ports:
    - name: http
      port: 80
      nodePort: 30080
